<resources>
    <string name="app_name">FareSplitter</string>
    <string name="hint_friend_name">Nome do amigo</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_delete">Excluir</string>
    <string name="title_friends">Amigos</string>
    <string name="title_edit_friend">Editar nome</string>
    <string name="btn_save">Salvar</string>
    <string name="fab_add_ride">Adicionar corrida</string>
    <string name="hint_app_name">Aplicativo (Uber, 99 Taxi…)</string>

    <string-array name="ride_apps">
        <item>Uber</item>
        <item>99 Taxi</item>
    </string-array>

    <string name="hint_fare">Valor total</string>
    <string name="hint_date">Data</string>
    <string name="label_participants">Participantes</string>
    <plurals name="participant_count">
        <item quantity="one">%d participante</item>
        <item quantity="other">%d participantes</item>
    </plurals>
    <string name="label_each_pays">Cada um paga</string>
    <string name="btn_save_ride">Salvar corrida</string>
    <string name="title_add_ride">Adicionar corrida</string>
    <string name="error_app_name">Informe o nome do aplicativo</string>
    <string name="error_fare">Informe um valor válido</string>
    <string name="title_summary">Resumo mensal</string>
    <string name="label_total_spent">Total gasto no mês</string>
    <string name="label_owed_to_you">Valor a receber</string>
    <plurals name="ride_count">
        <item quantity="one">%d corrida</item>
        <item quantity="other">%d corridas</item>
    </plurals>
    <string name="btn_export">Compartilhar / Salvar resumo</string>
    <string name="dialog_export_title">Exportar resumo</string>
    <string name="dialog_export_message">Como deseja exportar?</string>
    <string name="btn_share">Compartilhar (WhatsApp…)</string>
    <string name="btn_save_file">Salvar arquivo</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="msg_file_saved">Arquivo salvo na pasta Documentos</string>
    <string name="msg_file_error">Não foi possível salvar o arquivo</string>
    <string name="menu_friends">Amigos</string>
    <string name="menu_summary">Resumo</string>
    <string name="empty_rides">Nenhuma corrida ainda.\nToque em + para adicionar!</string>
    <string name="title_edit_ride">Editar corrida</string>
    <string name="btn_update_ride">Salvar alterações</string>
</resources>